# Copyright (C) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")

SUBSYSTEM_DIR = "//foundation/communication/ipc"

config("ipc_all_deps_config") {
  include_dirs = [ "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_core/include" ]
  if (is_emulator == true) {
    defines = [ "EMULATOR_PLATFORM" ]
  }
  if (is_arkui_x == true) {
    defines += [ "ARKUI_X_PLATFORM" ]
  }
}

ohos_prebuilt_shared_library("ipc_core") {
  source = "${root_out_dir}/communication/ipc/libipc_single.z.so"

  if (target_cpu == "arm") {
    symlink_ext = [ "lib/platformsdk/libipc_core.z.so" ]
  } else if (target_cpu == "arm64" || target_cpu == "x86_64") {
    symlink_ext = [ "lib64/platformsdk/libipc_core.z.so" ]
  }
  public_configs = [
    "$SUBSYSTEM_DIR/config:dsoftbus_header_deps_config",
    "$SUBSYSTEM_DIR/config:ipc_util_config",
    ":ipc_all_deps_config",
  ]

  deps = [ "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_single:ipc_single" ]

  install_enable = true
  innerapi_tags = [
    "chipsetsdk",
    "platformsdk",
    "sasdk",
  ]

  install_images = [
    system_base_dir,
    updater_base_dir,
  ]
  subsystem_name = "communication"
  part_name = "ipc"
}
