# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

if (support_jsapi) {
  config("napi_common_deps_config") {
    include_dirs = [
      "include",
      "../../../ipc/native/src/napi_common/include",
    ]
  }

  ohos_shared_library("ipc_napi") {
    sanitize = {
      integer_overflow = true
    }
    branch_protector_ret = "pac_ret"
    include_dirs = [
      "include",
      "../../../utils/include",
      "../../../ipc/native/src/napi_common/include",
    ]
    all_dependent_configs = [ ":napi_common_deps_config" ]
    public_configs = [ ":napi_common_deps_config" ]

    sources = [
      "../../../ipc/native/src/napi_common/source/napi_ashmem.cpp",
      "../../../ipc/native/src/napi_common/source/napi_message_parcel_read.cpp",
      "../../../ipc/native/src/napi_common/source/napi_message_parcel_write.cpp",
      "../../../ipc/native/src/napi_common/source/napi_message_sequence_read.cpp",
      "../../../ipc/native/src/napi_common/source/napi_message_sequence_write.cpp",
      "../../../ipc/native/src/napi_common/source/napi_process_skeleton.cpp",
      "../../../ipc/native/src/napi_common/source/napi_remote_object.cpp",
      "../../../ipc/native/src/napi_common/source/napi_remote_object_holder.cpp",
      "../../../ipc/native/src/napi_common/source/napi_remote_proxy_holder.cpp",
      "../../../ipc/native/src/napi_common/source/napi_rpc_error.cpp",
    ]

    deps = [ "../../../interfaces/innerkits/ipc_core:ipc_core" ]

    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
      "hitrace:hitrace_meter",
      "libuv:uv",
      "napi:ace_napi",
    ]

    install_images = [ system_base_dir ]
    subsystem_name = "communication"
    innerapi_tags = [ "platformsdk" ]
    part_name = "ipc"
  }
} else {
  ohos_shared_library("ipc_napi") {
  }
}
