# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

SUBSYSTEM_DIR = "../../.."

ohos_ndk_headers("ipc_capi_header") {
  dest_dir = "$ndk_headers_out_dir/IPCKit"
  sources = [
    "$SUBSYSTEM_DIR/interfaces/innerkits/c_api/include/ipc_cparcel.h",
    "$SUBSYSTEM_DIR/interfaces/innerkits/c_api/include/ipc_cremote_object.h",
    "$SUBSYSTEM_DIR/interfaces/innerkits/c_api/include/ipc_cskeleton.h",
    "$SUBSYSTEM_DIR/interfaces/innerkits/c_api/include/ipc_error_code.h",
    "$SUBSYSTEM_DIR/interfaces/innerkits/c_api/include/ipc_kit.h",
  ]
}

ohos_ndk_library("libipc_capi") {
  output_name = "ipc_capi"
  output_extension = "so"
  ndk_description_file = "./libipc_capi.json"
  system_capability = "SystemCapability.Communication.IPC.Core"
  system_capability_headers = [
    "IPCKit/ipc_cparcel.h",
    "IPCKit/ipc_cremote_object.h",
    "IPCKit/ipc_cskeleton.h",
    "IPCKit/ipc_error_code.h",
    "IPCKit/ipc_kit.h",
  ]
}
