# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/lite/build/suite_lite.gni")

SUBSYSTEM_DIR = "//foundation/communication/ipc"
IPC_CORE_ROOT = "$SUBSYSTEM_DIR/ipc/native/c"
IPC_TEST_CORE = "$SUBSYSTEM_DIR/ipc/test"

if (ohos_kernel_type == "linux") {
  hcpptest_suite("SerializerTest") {
    suite_name = "acts"
    sources = [ "utils_serializer_test.cpp" ]
    defines = [ "XTS_SUITE_TEST" ]
    include_dirs = [
      "$IPC_TEST_CORE/interfaces/innerkits/c/ipc/include",
      "$IPC_CORE_ROOT/manager/include",
    ]
    deps = [ "$SUBSYSTEM_DIR/interfaces/innerkits/c/ipc:ipc_single" ]
  }
}
